--- a/language/EN.json
+++ b/language/EN.json
@@ -166,7 +166,7 @@
         },
         "removebg": {
             "REMOVEBG_DESC": "Removes the background of the photos.",
-            "NEED_PHOTO": "*photo thaa mister!*",
+            "NEED_PHOTO": "*oru photo thaa mister!*",
             "NO_API_KEY": "*Api key illa aliyaa*\n```remove.bg login for apikey```",
             "RBGING": "```Removing...```"
         },
@@ -184,17 +184,17 @@
             "TTS_DESC": "It converts text to sound.",
             "TTS_ERROR": "```Error, Speech example of your sentence couldn't be made!```",
             "SONG_DESC": "Uploads the song you wrote.",
-            "NEED_TEXT_SONG": "*Please write a song!*\n*Example:* ```.song Naadan Vibe```",
+            "NEED_TEXT_SONG": "song inde name adikk daa muthee!*\n*Example:* ```.song Naadan Vibe```",
             "NO_RESULT": "*I couldn't find anything :(*",
-            "DOWNLOADING_SONG": "\n*Song Thapatte 🧚‍♂️*\n",
-            "UPLOADING_SONG": "\n*Uploading 📲 Use 🎧*\n",
+            "DOWNLOADING_SONG": "\n*ninde Song Thapatte 🧚‍♂️*\n",
+            "UPLOADING_SONG": "\n*wait cheyy Uploading cheyyukayaann 📲 nunbaa 🎧*\n",
             "VIDEO_DESC": "Downloads video from YouTube.",
             "NEED_VIDEO": "*Please write a video link!*\n*Example:* ```.video https://www.youtube.com/watch?v=nAFlVm5qeBc```",
-            "DOWNLOADING_VIDEO": "```Downloading 🎥...```",
-            "UPLOADING_VIDEO": "```Uploading...```",
+            "DOWNLOADING_VIDEO": "```Download cheyyatt monu 🎥...```",
+            "UPLOADING_VIDEO": "```Uploading... Wait cheyy ⚡```",
             "YT_DESC": "It searchs on YouTube.",
-            "NEED_WORDS": "```Please write a few words!```",
-            "GETTING_VIDEOS": "```I'm bringing videos...```",
+            "NEED_WORDS": "```NAME type cheyy ennaalee kittuu😆!```",
+            "GETTING_VIDEOS": "```videos varaan kurachu samayam venam wait cheyyuulee muthee💋...```",
             "NOT_FOUND": "*Thappinokeett kittiyilla ☹️*",
             "SEARCHING": "*🔎 Searching...*",
             "WIKI_DESC": "Searches query on Wikipedia.",
@@ -203,27 +203,27 @@
         },
         "sticker": {
             "STICKER_DESC": "It converts your replied photo or video to sticker.",
-            "NEED_REPLY": "*Reply to a photo or video!*",
-            "DOWNLOADING": "```Ippam Seriyakithra 🤠```"
+            "NEED_REPLAY":"*EDAA ORU PHOTO YOO VIDEO YOO AYAKK🙂!*",
+            "DOWNLOADING": "```Ippam Seriyakithra✨ 🤠```"
         },
         "system_stats": {
             "ALIVE_DESC": "Does bot work?",
             "SYSD_DESC": "Shows the system properties."
         },
         "tagall": {
-            "TAGALL_DESC": "Tags everyone in the group.",
-            "ADMİN": "*I am not admin in this group!*"
+            "TAGALL_DESC": "🔻IRANGI VAA MAKKALEE 🔻",
+            "ADMİN": "*group ile muthirnnavarokke irangi vaa!*"
         },
         "updater": {
             "UPDATER_DESC": "Checks the update.",
             "UPDATE": "*Your bot is completely up-to-date!*",
-            "NEW_UPDATE": "*Pikachu Update Available*\n\n please ask support group before updating. Otherwise chance to get error\n Max Error oyvakkan Subscribe cheyyu https://www.youtube.com/channel/UCpGa88rhUFYj-6-LBqBbWKw \n https://chat.whatsapp.com/FsDjV2uRKce4wgMpAtYwyf \n\nChanges:\n```",
+            "NEW_UPDATE": "*AVENGER Update Available*\n\n please ask support group before updating. Otherwise chance to get error\n Max Error oyvakkan Subscribe cheyyu https://www.youtube.com/channel/UCpGa88rhUFYj-6-LBqBbWKw \n https://chat.whatsapp.com/FsDjV2uRKce4wgMpAtYwyf \n\nChanges:\n```",
             "UPDATE_NOW_DESC": "It makes updates.",
             "UPDATING": "```Updating..🧚‍♂️```",
             "INVALID_HEROKU": "*❌ Your Heroku information is wrong!*",
             "UPDATED": "*Updated 🤠✅*",
             "UPDATED_LOCAL": "*✅ Successfully Updated!*",
-            "AFTER_UPDATE": "*😎 Pikachu Restarting*"
+            "AFTER_UPDATE": "*😎 AVENGER Restarting*"
         },
         "weather": {
             "WEATHER_DESC": "Shows the weather.",
@@ -279,7 +279,7 @@
             "PUBLICATION": "Publication",
             "SONGL": "Link",
             "NEED_SONG": "Song name para nenba 🥲.",
-            "NOT_FOUNDS" : "No such songs found!",
+            "NOT_FOUNDS" : "EE SONG KITTUNNILLA 😢!",
             "JOOX_DESC": "Brings you the song details and a link for it.",
             "LYRICS_DESC": "Brings you the song Lyrics.",
             "SONGLI": "Lyrics",
@@ -314,7 +314,7 @@
         },
         "conventer": {
             "MP4TOAUDİO_DESC": "Converts video to sound.",
-            "MP4TOAUDİO_NEEDREPLY": "*You Must Reply to a Video!*",
+            "MP4TOAUDİO_NEEDREPLY": "*ORU VIDEO AYAKK DAA!*",
             "MP4TOAUDİO": "```Converting Video to Audio..```",
             "STİCKER_DESC": "Converts the sticker to a photo.",
             "STİCKER_NEEDREPLY": "*Photokk Reply ayitt ayakk*",
