--- a/language/EN.json
+++ b/language/EN.json
@@ -219,11 +219,11 @@
             "UPDATE": "*Your bot is completely up-to-date!*",
             "NEW_UPDATE": "*AVENGER Update Available*\n\n please ask support group before updating. Otherwise chance to get error\n Max Error oyvakkan Subscribe cheyyu https://www.youtube.com/channel/UCpGa88rhUFYj-6-LBqBbWKw \n https://chat.whatsapp.com/FsDjV2uRKce4wgMpAtYwyf \n\nChanges:\n```",
             "UPDATE_NOW_DESC": "It makes updates.",
-            "UPDATING": "```Updating..🧚‍♂️```",
+            "UPDATING": "```💥Updating..cheyyunnu 5-8 minutes wait cheyy💥```",
             "INVALID_HEROKU": "*❌ Your Heroku information is wrong!*",
-            "UPDATED": "*Updated 🤠✅*",
-            "UPDATED_LOCAL": "*✅ Successfully Updated!*",
-            "AFTER_UPDATE": "*😎 AVENGER Restarting*"
+            "UPDATED": "*Updated ⚡*",
+            "UPDATED_LOCAL": "*✅ Successfully Updated✅!*",
+            "AFTER_UPDATE": "*😎 AVENGER Restarting♻️*"
         },
         "weather": {
             "WEATHER_DESC": "Shows the weather.",
