--- a/language/EN.json
+++ b/language/EN.json
@@ -216,12 +216,12 @@
         },
         "updater": {
             "UPDATER_DESC": "Checks the update.",
-            "UPDATE": "*Your bot is completely up-to-date!*",
+            "UPDATE": "*⚡👑NINGANUDE BOT COMPLETELY UPDATE AANN👑⚡!*",
             "NEW_UPDATE": "*AVENGER Update Available*\n\n please ask support group before updating. Otherwise chance to get error\n Max Error oyvakkan Subscribe cheyyu https://www.youtube.com/channel/UCpGa88rhUFYj-6-LBqBbWKw \n https://chat.whatsapp.com/FsDjV2uRKce4wgMpAtYwyf \n\nChanges:\n```",
             "UPDATE_NOW_DESC": "It makes updates.",
             "UPDATING": "```💥Updating..cheyyunnu 5-8 minutes wait cheyy💥```",
             "INVALID_HEROKU": "*❌ Your Heroku information is wrong!*",
-            "UPDATED": "*Updated ⚡*",
+            "UPDATED": "*✨🏁Update cheithu⚡✅*",
             "UPDATED_LOCAL": "*✅ Successfully Updated✅!*",
             "AFTER_UPDATE": "*😎 AVENGER Restarting♻️*"
         },
